Library/AXL(Library)/C, C++/AXM.h

//========== Board and module verification API(Info) - Information =================================================================================
// Return board number, module position and module ID of relevant axis.
DWORD    __stdcall AxmInfoGetAxis(long lAxisNo, long *lpBoardNo, long *lpModulePos, DWORD *upModuleID);
// Get the specified module board : Sub ID, module name, module description
//===============================================/
// support product      : EtherCAT
// upModuleSubID        : EtherCAT SubID(for distinguish between EtherCAT modules)
// szModuleName         : model name of module(50 Bytes)
// szModuleDescription  : description of module(80 Bytes)
//======================================================//
DWORD    __stdcall AxmInfoGetAxisEx(long lAxisNo, DWORD *upModuleSubID, char* szModuleName, char* szModuleDescription);
// Return whether the motion module exists.
DWORD    __stdcall AxmInfoIsMotionModule(DWORD *upStatus);
// Return whether relevant axis is valid.
DWORD    __stdcall AxmInfoIsInvalidAxisNo(long lAxisNo);
// Return whether relevant axis status.
DWORD    __stdcall AxmInfoGetAxisStatus(long lAxisNo);
// number of RTEX Products, return number of valid axis installed in system.
DWORD    __stdcall AxmInfoGetAxisCount(long *lpAxisCount);
// Return the first axis number of relevant board/module
DWORD    __stdcall AxmInfoGetFirstAxisNo(long lBoardNo, long lModulePos, long *lpAxisNo);
// Return the first axis number of relevant board.
DWORD    __stdcall AxmInfoGetBoardFirstAxisNo(long lBoardNo, long lModulePos, long *lpAxisNo);
//========= virtual axis function ============================================================================================
//
// Set virtual axis.
DWORD    __stdcall AxmVirtualSetAxisNoMap(long lRealAxisNo, long lVirtualAxisNo);
// Return the set virtual channel(axis) number.
DWORD    __stdcall AxmVirtualGetAxisNoMap(long lRealAxisNo, long *lpVirtualAxisNo);
// Set multi-virtual axes.
DWORD    __stdcall AxmVirtualSetMultiAxisNoMap(long lSize, long *lpRealAxesNo, long *lpVirtualAxesNo);
// Return the set multi-virtual channel(axis) number.
DWORD    __stdcall AxmVirtualGetMultiAxisNoMap(long lSize, long *lpRealAxesNo, long *lpVirtualAxesNo);
// Reset the virtual axis setting.
DWORD    __stdcall AxmVirtualResetAxisMap();
// Redefine the axis number.
DWORD    __stdcall AxmVirtualSetMultiReDefineAxisNo(long lSize, long *lpReDefineAxesNo);
// Get the redefined axis number.
DWORD    __stdcall AxmVirtualGetMultiReDefineAxisNo(long lSize, long *lpReDefineAxesNo);
//========= API related interrupt ======================================================================================
// Call-back API method has the advantage which can be advised the event most fast timing as the call-back API is called immediately when the event occurs, but
// the main processor shall be congested until the call-back API is completed.
// i.e, it shall be carefully used when there is any work loaded in the call-bak API.
// Event method monitors if interrupt occurs continuously by using thread, and when interrupt is occurs
// it manages, and even though this method has disadvantage which system resource is occupied by thread ,
// it can detect interrupt most quickly and manage it.
// It is not used a lot in general, but used when quick management of interrupt is the most concern.
// Event method is operated using specific thread which monitors the occurrence of event separately from main processor , so
// it able to use the resources efficiently in multi-processor system and expressly recommendable method.

// Window message or call back API is used for getting the interrupt message.
// (message handle, message ID, call back API, interrupt event)
//    hWnd    : use to get window handle and window message. Enter NULL if it is not used.
//    wMsg    : message of window handle, enter 0 if is not used or default value is used.
//    proc    : API pointer to be called when interrupted, enter NULL if not use
//    pEvent  : Event handle when event method is used.
// Ex)
// AxmInterruptSetAxis(0, Null, 0, AxtInterruptProc, NULL);
// void __stdcall AxtInterruptProc(long lActiveNo, DWORD uFlag){
//     ... ;
// }
DWORD    __stdcall AxmInterruptSetAxis(long lAxisNo, HWND hWnd, DWORD uMessage, AXT_INTERRUPT_PROC pProc, HANDLE *pEvent);
// Set whether to use interrupt of set axis or not.
// Set interrupt in the relevant axis/ verification
// uUse : use or not use => DISABLE(0), ENABLE(1)
DWORD    __stdcall AxmInterruptSetAxisEnable(long lAxisNo, DWORD uUse);
// Return whether to use interrupt of set axis or not
DWORD    __stdcall AxmInterruptGetAxisEnable(long lAxisNo, DWORD *upUse);
//Read relevant information when interrupt is used in event method
DWORD    __stdcall AxmInterruptRead(long *lpAxisNo, DWORD *upFlag);
// Return interrupt flag value of relevant axis.
DWORD    __stdcall AxmInterruptReadAxisFlag(long lAxisNo, long lBank, DWORD *upFlag);
// Set whether the interrupt set by user to specific axis occurs or not
// lBank         : Enable to set interrupt bank number(0 - 1).
// uInterruptNum : Enable to set interrupt number by setting bit number( 0 - 31 ).
DWORD    __stdcall AxmInterruptSetUserEnable(long lAxisNo, long lBank, DWORD uInterruptNum);
// Verify whether the interrupt set by user of specific axis occurs or not
DWORD    __stdcall AxmInterruptGetUserEnable(long lAxisNo, long lBank, DWORD *upInterruptNum);
//======== set motion parameter ===========================================================================================================================================================
// If file is not loaded by AxmMotLoadParaAll, set default parameter in initial parameter setting.
// Apply to all axes which is being used in PC equally. Default parameters are as below.
// 00:AXIS_NO.             =0       01:PULSE_OUT_METHOD.    =4      02:ENC_INPUT_METHOD.    =3     03:INPOSITION.          =2
// 04:ALARM.               =0       05:NEG_END_LIMIT.       =0      06:POS_END_LIMIT.       =0     07:MIN_VELOCITY.        =1
// 08:MAX_VELOCITY.        =700000  09:HOME_SIGNAL.         =4      10:HOME_LEVEL.          =1     11:HOME_DIR.            =-1
// 12:ZPHASE_LEVEL.        =1       13:ZPHASE_USE.          =0      14:STOP_SIGNAL_MODE.    =0     15:STOP_SIGNAL_LEVEL.   =0
// 16:HOME_FIRST_VELOCITY. =10000   17:HOME_SECOND_VELOCITY.=10000  18:HOME_THIRD_VELOCITY. =2000  19:HOME_LAST_VELOCITY.  =100
// 20:HOME_FIRST_ACCEL.    =40000   21:HOME_SECOND_ACCEL.   =40000  22:HOME_END_CLEAR_TIME. =1000  23:HOME_END_OFFSET.     =0
// 24:NEG_SOFT_LIMIT.      =0.000   25:POS_SOFT_LIMIT.      =0      26:MOVE_PULSE.          =1     27:MOVE_UNIT.           =1
// 28:INIT_POSITION.       =1000    29:INIT_VELOCITY.       =200    30:INIT_ACCEL.          =400   31:INIT_DECEL.          =400
// 32:INIT_ABSRELMODE.     =0       33:INIT_PROFILEMODE.    =4

// 00=[AXIS_NO             ]: axis (start from 0axis)
// 01=[PULSE_OUT_METHOD    ]: Pulse out method TwocwccwHigh = 6
// 02=[ENC_INPUT_METHOD    ]: disable = 0   1 multiplication = 1  2 multiplication = 2  4 multiplication = 3, for replacing the direction of splicing (-).1 multiplication = 11  2 multiplication = 12  4 multiplication = 13
// 03=[INPOSITION          ], 04=[ALARM     ], 05,06 =[END_LIMIT   ]  : 0 = A contact 1= B contact 2 = not use. 3 = keep current mode
// 07=[MIN_VELOCITY        ]: START VELOCITY
// 08=[MAX_VELOCITY        ]: command velocity which driver can accept. Generally normal servo is 700k
// Ex> screw : 20mm pitch drive: 10000 pulse motor: 400w
// 09=[HOME_SIGNAL         ]: 4 - Home in0 , 0 :PosEndLimit , 1 : NegEndLimit // refer _HOME_SIGNAL.
// 10=[HOME_LEVEL          ]: : 0 = A contact 1= B contact 2 = not use. 3 = keep current mode
// 11=[HOME_DIR            ]: HOME DIRECTION 1:+direction, 0:-direction
// 12=[ZPHASE_LEVEL        ]: : 0 = A contact 1= B contact 2 = not use. 3 = keep current mode
// 13=[ZPHASE_USE          ]: use of Z phase. 0: not use , 1: - direction, 2: +direction
// 14=[STOP_SIGNAL_MODE    ]: ESTOP, mode in use of SSTOP  0:slowdown stop, 1:emergency stop
// 15=[STOP_SIGNAL_LEVEL   ]: ESTOP, SSTOP use level. : 0 = A contact 1= B contact 2 = not use. 3 = keep current mode
// 16=[HOME_FIRST_VELOCITY ]: 1st move velocity
// 17=[HOME_SECOND_VELOCITY]: velocity after detecting
// 18=[HOME_THIRD_VELOCITY ]: the last velocity
// 19=[HOME_LAST_VELOCITY  ]: velocity for index detecting and detail detecting
// 20=[HOME_FIRST_ACCEL    ]: 1st acceleration, 21=[HOME_SECOND_ACCEL   ] : 2nd acceleration
// 22=[HOME_END_CLEAR_TIME ]: queue time to set origin detecting Enc value,  23=[HOME_END_OFFSET] : move as much as offset after detecting of origin.
// 24=[NEG_SOFT_LIMIT      ]: - not use if set same as SoftWare Limit , 25=[POS_SOFT_LIMIT ]: - not use if set same as SoftWare Limit.
// 26=[MOVE_PULSE          ]: amount of pulse per driver revolution               , 27=[MOVE_UNIT  ]: travel distance per driver revolution :screw Pitch
// 28=[INIT_POSITION       ]: initial position when use agent , user can use optionally
// 29=[INIT_VELOCITY       ]: initial velocity when use agent, user can use optionally
// 30=[INIT_ACCEL          ]: initial acceleration when use agent, user can use optionally
// 31=[INIT_DECEL          ]: initial deceleration when use agent, user can use optionally
// 32=[INIT_ABSRELMODE     ]: absolute(0)/relative(1) set position
// 33=[INIT_PROFILEMODE    ]: set profile mode in (0 - 4)
//                            '0': symmetry Trapezode, '1': asymmetric Trapezode, '2': symmetry Quasi-S Curve, '3':symmetry S Curve, '4':asymmetric S Curve
// 34=[SVON_LEVEL          ]: 0 = contact B, 1 = contact A
// 35=[ALARM_RESET_LEVEL   ]: 0 = contact B, 1 = contact A
// 36=[ENCODER_TYPE        ]: 0 = TYPE_INCREMENTAL, 1 = TYPE_ABSOLUTE, 2 = TYPE_NONE
// 37=[SOFT_LIMIT_SEL      ]: 0 = COMMAND, 1 = ACTUAL
// 38=[SOFT_LIMIT_STOP_MODE]: 0 = EMERGENCY_STOP, 1 = SLOWDOWN_STOP
// 39=[SOFT_LIMIT_ENABLE   ]: 0 = DISABLE, 1 = ENABLE

// load .mot file which is saved as AxmMotSaveParaAll. Optional modification is available by user.
DWORD    __stdcall AxmMotLoadParaAll(char *szFilePath);