Library/AXL(Library)/Visual Basic/AXM.bas

'*****************************************************************************
'/****************************************************************************
'*****************************************************************************
'**
'** File Name
'** ---------
'**
'** AXM.BAS
'**
'** COPYRIGHT (c) AJINEXTEK Co., LTD
'**
'*****************************************************************************
'*****************************************************************************
'**
'** Description
'** -----------
'** Ajinextek Motion Library Header File
'** 
'**
'*****************************************************************************
'*****************************************************************************
'**
'** Source Change Indices
'** ----------------------
'** 
'** (None)
'**
'**
'*****************************************************************************
'*****************************************************************************
'**
'** Website
'** ---------------------
'**
'** http://www.ajinextek.com
'**
'*****************************************************************************
'*****************************************************************************
'*/
'

Attribute VB_Name = "AXM"


'****************************************************************************
'*****************************************************************************
'**
'** File Name
'** ---------
'**
'** AXM.BAS
'**
'** COPYRIGHT (c) AJINEXTEK Co., LTD
'**
'*****************************************************************************
'*****************************************************************************
'**
'** Description
'** -----------
'** Ajinextek Motion Library Header File
'**
'**
'*****************************************************************************
'*****************************************************************************
'**
'** Source Change Indices
'** ---------------------
'**
'** (None)
'**
'**
'*****************************************************************************
'*****************************************************************************
'**
'** Website
'** ---------------------
'**
'** http://www.ajinextek.com
'**
'*****************************************************************************
'*****************************************************************************
'*

'========== Board and module verification API(Info) - Information =================================================================================

' Return board number, module position and module ID of relevant axis.
Public Declare Function AxmInfoGetAxis Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef lpBoardNo As Long, ByRef lpModulePos As Long, ByRef upModuleID As Long) As Long

' Get the specified module board : Sub ID, module name, module description
'===============================================/
' support product      : EtherCAT
' upModuleSubID        : EtherCAT SubID(for distinguish between EtherCAT modules)
' szModuleName         : model name of module(50 Bytes)
' szModuleDescription  : description of module(80 Bytes)
'======================================================//
Public Declare Function AxmInfoGetAxisEx Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upModuleSubID As Long, ByRef szModuleName As String, ByRef szMoculeDescription As String) As Long


' Return whether the motion module exists.
Public Declare Function AxmInfoIsMotionModule Lib "AXL.dll" (ByRef upStatus As Long) As Long
' Return whether relevant axis is valid.
Public Declare Function AxmInfoIsInvalidAxisNo Lib "AXL.dll" (ByVal lAxisNo As Long) As Long
' Return whether relevant axis status.
Public Declare Function AxmInfoGetAxisStatus Lib "AXL.dll" (ByVal lAxisNo As Long) As Long
' number of RTEX Products, return number of valid axis installed in system.
Public Declare Function AxmInfoGetAxisCount Lib "AXL.dll" (ByRef lpAxisCount As Long) As Long
' Return the first axis number of relevant board/module
Public Declare Function AxmInfoGetFirstAxisNo Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModulePos As Long, ByRef lpAxisNo As Long) As Long
' Return the first axis number of relevant board
Public Declare Function AxmInfoGetBoardFirstAxisNo Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModulePos As Long, ByRef lpAxisNo As Long) As Long



'========= virtual axis function ============================================================================================

' Set virtual axis.
Public Declare Function AxmVirtualSetAxisNoMap Lib "AXL.dll" (ByVal lRealAxisNo As Long, ByVal lVirtualAxisNo As Long) As Long
' Return the set virtual channel(axis) number.
Public Declare Function AxmVirtualGetAxisNoMap Lib "AXL.dll" (ByVal lRealAxisNo As Long, ByRef lpVirtualAxisNo As Long) As Long
' Set multi-virtual axes.
Public Declare Function AxmVirtualSetMultiAxisNoMap Lib "AXL.dll" (ByVal lSize As Long, ByRef lpRealAxesNo As Long, ByRef lpVirtualAxesNo As Long) As Long
' Return the set multi-virtual channel(axis) number.
Public Declare Function AxmVirtualGetMultiAxisNoMap Lib "AXL.dll" (ByVal lSize As Long, ByRef lpRealAxesNo As Long, ByRef lpVirtualAxesNo As Long) As Long
' Reset the virtual axis setting.
Public Declare Function AxmVirtualResetAxisMap Lib "AXL.dll" () As Long

    Public Declare Function AxmVirtualSetMultiReDefineAxisNo Lib "AXL.dll" (ByVal lSize As Long, ByRef lpReDefineAxesNo As Long) As Long
    Public Declare Function AxmVirtualGetMultiReDefineAxisNo Lib "AXL.dll" (ByVal lSize As Long, ByRef lpReDefineAxesNo As Long) As Long


'========= API related interrupt ======================================================================================

' Call-back API method has the advantage which can be advised the event most fast timing as the call-back API is called immediately when the event occurs, but
' the main processor shall be congested until the call-back API is completed.
' i.e, it shall be carefully used when there is any work loaded in the call-bak API.
' Event method monitors if interrupt occurs continuously by using thread, and when interrupt is occurs
' it manages, and even though this method has disadvantage which system resource is occupied by thread ,
' it can detect interrupt most quickly and manage it.
' It is not used a lot in general, but used when quick management of interrupt is the most concern.
' Event method is operated using specific thread which monitors the occurrence of event separately from main processor , so
' it able to use the resources efficiently in multi-processor system and expressly recommendable method.

' Window message or call back API is used for getting the interrupt message.
' (message handle, message ID, call back API, interrupt event)
'    hWnd    : use to get window handle and window message. Enter NULL if it is not used.
'    wMsg    : message of window handle, enter 0 if is not used or default value is used.
'    proc    : API pointer to be called when interrupted, enter NULL if not use
'    pEvent  : Event handle when event method is used.
' Ex)
' AxmInterruptSetAxis(0, Null, 0, AxtInterruptProc, NULL);
' void __stdcall AxtInterruptProc(long lActiveNo, DWORD uFlag){
'     ... ;
' }
Public Declare Function AxmInterruptSetAxis Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal hWnd As Long, ByVal uMessage As Long, ByVal pProc As Long, ByRef pEvent As Long) As Long


' Set whether to use interrupt of set axis or not.
' Set interrupt in the relevant axis/ verification
' uUse : use or not use => DISABLE(0), ENABLE(1)
Public Declare Function AxmInterruptSetAxisEnable Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uUse As Long) As Long
' Return whether to use interrupt of set axis or not
Public Declare Function AxmInterruptGetAxisEnable Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upUse As Long) As Long


' Read relevant information when interrupt is used in event method
Public Declare Function AxmInterruptRead Lib "AXL.dll" (ByRef lpAxisNo As Long, ByRef upFlag As Long) As Long

' Return interrupt flag value of relevant axis.
Public Declare Function AxmInterruptReadAxisFlag Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal lBank As Long, ByRef upFlag As Long) As Long


' Set whether the interrupt set by user to specific axis occurs or not
' lBank         : Enable to set interrupt bank number(0 - 1).
' uInterruptNum : Enable to set interrupt number by setting bit number( 0 - 31 ).
Public Declare Function AxmInterruptSetUserEnable Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal lBank As Long, ByVal lInterruptNum As Long) As Long

' Verify whether the interrupt set by user of specific axis occurs or not
Public Declare Function AxmInterruptGetUserEnable Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal lBank As Long, ByRef upInterruptNum As Long) As Long




'======== set motion parameter ===========================================================================================================================================================
' If file is not loaded by AxmMotLoadParaAll, set default parameter in initial parameter setting.
' Apply to all axes which is being used in PC equally. Default parameters are as below.
' 00:AXIS_NO.             =0       01:PULSE_OUT_METHOD.    =4      02:ENC_INPUT_METHOD.    =3     03:INPOSITION.          =2
' 04:ALARM.               =0       05:NEG_END_LIMIT.       =0      06:POS_END_LIMIT.       =0     07:MIN_VELOCITY.        =1
' 08:MAX_VELOCITY.        =700000  09:HOME_SIGNAL.         =4      10:HOME_LEVEL.          =1     11:HOME_DIR.            =-1
' 12:ZPHASE_LEVEL.        =1       13:ZPHASE_USE.          =0      14:STOP_SIGNAL_MODE.    =0     15:STOP_SIGNAL_LEVEL.   =0
' 16:HOME_FIRST_VELOCITY. =10000   17:HOME_SECOND_VELOCITY.=10000  18:HOME_THIRD_VELOCITY. =2000  19:HOME_LAST_VELOCITY.  =100
' 20:HOME_FIRST_ACCEL.    =40000   21:HOME_SECOND_ACCEL.   =40000  22:HOME_END_CLEAR_TIME. =1000  23:HOME_END_OFFSET.     =0
' 24:NEG_SOFT_LIMIT.      =0.000   25:POS_SOFT_LIMIT.      =0      26:MOVE_PULSE.          =1     27:MOVE_UNIT.           =1
' 28:INIT_POSITION.       =1000    29:INIT_VELOCITY.       =200    30:INIT_ACCEL.          =400   31:INIT_DECEL.          =400
' 32:INIT_ABSRELMODE.     =0       33:INIT_PROFILEMODE.    =4
